# ARUSSim

./: .gitignore  .gitmodules  Doxyfile  README.md  automatic_sim.sh  update_dependencies.sh
.github/workflows/: commits.yml  docs_pages_workflow.yml  doxygen_docs.yml  doxygen_documentation.yml  python_linting.yml  ros2_and_c++_integration.yml  static.yml
doxygen/: ART24D_8stl.html  Cmd4WD_8msg.html  Cmd4WD_8msg_source.html  Cmd_8msg.html  Cmd_8msg_source.html  ConeXYZColorScore_8h.html  ConeXYZColorScore_8h__dep__incl.map  ConeXYZColorScore_8h__dep__incl.md5  ConeXYZColorScore_8h__incl.map  ConeXYZColorScore_8h__incl.md5  ConeXYZColorScore_8h_source.html  FSEast23_8json.html  FSEast23_8json_source.html  FSG24_8json.html  FSG24_8json_source.html  FSG_8json.html  FSG_8json_source.html  FourWheelDrive_8msg.html  FourWheelDrive_8msg_source.html  PointXY_8msg.html  PointXY_8msg_source.html  State_8msg.html  State_8msg_source.html  Trajectory_8msg.html  Trajectory_8msg_source.html  acceleration_8json.html  acceleration_8json_source.html  annotated.html  arussim_2CMakeLists_8txt.html  arussim_2package_8xml.html  arussim_2package_8xml_source.html  arussim__launch_8py.html  arussim__launch_8py_source.html  arussim__msgs_2CMakeLists_8txt.html  arussim__msgs_2package_8xml.html  arussim__msgs_2package_8xml_source.html  arussim__node_8cpp.html  arussim__node_8cpp__incl.map  arussim__node_8cpp__incl.md5  arussim__node_8cpp_source.html  (+643 more)
doxygen/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  files_0.js  files_1.js  (+58 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arussim/include/arussim/: arussim_node.hpp  main_interface.hpp  vehicle_dynamics.hpp
install/arussim/lib/arussim/: sensors_exec
install/arussim/share/arussim/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arussim/share/arussim/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  export_main_interfaceExport-noconfig.cmake  export_main_interfaceExport.cmake
install/arussim/share/arussim/launch/: sim_automatic_launch.py
install/arussim_msgs/share/arussim_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/automatic_simulations/lib/automatic_simulations/: automatic_simulations_exec
install/automatic_simulations/share/automatic_simulations/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/arussim/: CMakeLists.txt  main_interface.xml  package.xml  plot_interface.xml  rviz_common_plugins.xml  stats_interface.xml
src/arussim/config/: arussim_rviz_config.rviz  arussim_stats_rviz_config.rviz  control_sim_config.yaml  params.yaml  sensors_config.yaml  sensors_params.yaml  simulator_config.yaml  simulator_params.yaml  supervisor_config.yaml
src/arussim/include/arussim/: arussim_node.hpp  best_lap_recorder.hpp  control_raspi.hpp  csv_generator.hpp  extended_interface.hpp  main_interface.hpp  plot_interface.hpp  sensors.hpp  stats_interface.hpp  supervisor.hpp  tpl.hpp  vehicle_dynamics.hpp
src/arussim/include/arussim/control_sim/: Parameters.h  SensorData.h  aux_functions.h  control_sim.hpp  estimation.h  power_control.h  torque_vectoring.h  traction_control.h
src/arussim/include/controller_sim/: controller_sim.hpp  estimation.hpp  kalman_filter.hpp  power_limitation.hpp  torque_vectoring.hpp  traction_control.hpp
src/arussim/laptimes/: .csv  FSEast23.csv  FSG.csv  FSG24.csv  FSG25.csv  FSS24.csv  FSX25.csv  acceleration.csv  skidpad.csv  slam_track.csv  test13May.csv  test15M.csv  test27F.csv  test29N.csv  test5N.csv
src/arussim/launch/: arussim.launch.py  arussim_launch.py  arussim_raspi_launch.py  arussim_stats_launch.py  extended_arussim_launch.py  sim_automatic_launch.py
src/arussim/resources/tracks/: FSG.json  FSG.pcd  FSS24.pcd  FSX25.pcd  acceleration.pcd  ej1.json  hockenheim.json  skidpad.pcd  test1.pcd  test10A.pcd  test13May.pcd  test15M.json  test15M.pcd  test29A.pcd  test5N.pcd
src/arussim/resources/tracks/competition/: FSEast23.json  FSEast23.pcd  FSG24.json  FSG24.pcd  FSG25.pcd
src/arussim/resources/tracks/custom/: acceleration.json  acceleration.pcd  circuit_202574.json  circuit_202574.pcd  circuit_2982207353.json  circuit_2982207353.pcd  circuit_593794636.json  circuit_593794636.pcd  slam_track.pcd
src/arussim/resources/tracks/test/: test13May.json  test27F.json  test29N.pcd  test5N.pcd
src/arussim/src/: arussim_node.cpp  control_raspi.cpp  csv_generator.cpp  extended_interface.cpp  main_interface.cpp  plot_interface.cpp  sensors.cpp  stats_interface.cpp  supervisor.cpp  tpl.cpp  vehicle_dynamics.cpp
src/arussim/src/control_sim/: aux_functions.c  control_sim.cpp  estimation.c  power_control.c  torque_vectoring.c  traction_control.c
src/arussim_msgs/: CMakeLists.txt  package.xml
src/arussim_msgs/msg/: Cmd.msg  State.msg
src/arussim_msgs/srv/: SetFOV.srv  SetTimer.srv
src/automatic_simulations/: CMakeLists.txt  README.md  package.xml
src/automatic_simulations/config/: auto_sim_config.yaml  automatic_simulations_config.yaml
src/automatic_simulations/include/automatic_simulations/: automatic_simulations.hpp
src/automatic_simulations/launch/: automatic_simulations_launch.py
src/automatic_simulations/src/: automatic_simulations.cpp
src/custom_msgs/: CMakeLists.txt
src/custom_msgs/msg/: FourWheelDrive.msg
src/log_plotter/: log_plotter.py  requirements.txt
src/track_editor/: circuit_gen_core.py  circuit_generator.py  drawView.py  guiLogic.py  main.py  mapFile.py  points_to_circuit.py  readme.md
(+124 files in other folders)
